--- a/css/janne.css
+++ b/css/janne.css
@@ -27,18 +27,23 @@ button{
  
  }
 .hpBox{
-    background-color: rgba(211, 211, 211, 0.8);
+    
     font-size: 1.1em;
 }
 
 .tab {
     border: lightgray 1px solid;
 }
+.hostile{
+    background-color: rgba(220, 20, 60, 0.2);
+}
 
 .current{
     border: lightskyblue 1px solid !important;
     box-shadow: 1px 1px 1px 1px lightsteelblue;
+    transform: scale(1.05);
 }
+
 
 @keyframes pulse {
     0% {
